src/main/java/com/example/usedTrade/member/error/exception/MemberStopUserException.java
package com.example.usedTrade.member.error.exception;

public class MemberStopUserException extends RuntimeException {
    public MemberStopUserException(String error) {
        super(error);
    }
}
